# SoftwareDevelopmentVIMMO

./: .gitignore  Jenkinsfile  README.md  docker-compose.yml  notes_for_mani.txt  pyproject.toml
Jenkins_Build_output/: #Latest_build_log.txt  Jenkins_Notes.txt
database_prework/createdb/: jason_all_data.py  patient_info.csv
docs/: vimmo.docx
test_vimmo/integrationtests/: test_panel_download_endpoints.py  test_panel_endpoints.py  test_panel_local_download_endpoints.py  test_patient_endpoints.py
test_vimmo/unittests/: test_arg_validator.py  test_db.py  test_panelapp.py  test_parser.py
vimmo/API/: endpoints.py
vimmo/db/: db_downgrade.py  db_query.py  db_update.py  scheduled_update.py  scheduler.py  setup_cron.sh  test_weekly_update.py  weekly_update.py
vimmo/utils/: arg_validator.py  endpoint_process_func.py  localbed.py  panelapp.py  parser.py  variantvalidator.py
