[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vimmo"
version = "1.1.0"
description = "App that gives you stuff"
readme = "README.md"
#"Update before release"
authors = [
    {name = "Vincent"},
    {name = "Iwan"},
    {name = "Moe"},
    {name = "Mani"},
    {name = "Ollie"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
requires-python = ">=3.13"
dependencies = [
    "Flask==3.1.0",
    "flask-restx==1.3.0",
    "requests==2.32.3",
    "pandas==2.2.3",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "unittest2==1.1.0"
]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["vimmo*", "test_vimmo*"]  # Added test directory

[tool.setuptools.package-data]
"vimmo" = [
    "db/*.db",
    "utils/*.txt",  # Added to include problem_genes.txt
    "db/logs/*"     # Added to include logs
]



[project.scripts]
vimmo = "vimmo.main:main"
dbscheduler = "vimmo.db.scheduler:main"
